hphp/hack/test/typecheck/expression_trees/pipe4.php.exp
ERROR: File "pipe4.php", line 12, characters 47-48:
Invalid argument (Typing[4110])
  File "pipe4.php", line 5, characters 14-16:
  Expected `int`
  File "pipe4.php", line 5, characters 23-51:
  But got `ExampleExpression<int>`
ERROR: File "pipe4.php", line 14, characters 10-12:
Invalid return type (Typing[4110])
  File "pipe4.php", line 9, characters 36-47:
  Expected `float`
  File "pipe4.php", line 12, characters 22-49:
  But got `int`
  File "expr_tree.php", line 123, characters 24-29:
    via this generic `TInfer`
  File "expr_tree.php", line 538, characters 52-52:
    via this generic `T`
  File "expr_tree.php", line 100, characters 26-31:
    via this generic `TInfer`
